cluster/infra/flux-system/flux-instance/receiver/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitlab-webhook
spec:
  # noinspection KubernetesUnknownValues
  hostnames: [ 'flux-webhook.talos.${DOMAIN_NAME}' ]
  parentRefs:
    - name: envoy
      namespace: envoy-system
      sectionName: https
  rules:
    - backendRefs:
        - name: webhook-receiver
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /hook/
