cluster/infra/flux-system/flux-instance/receiver/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-webhook
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: network-system-authelia-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: flux-webhook.${DOMAIN_NAME}
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
